# robo-init

./: LICENSE  README.md  setup.cfg
example/: niryo.yml
hyperconfig/: udev.py
robo_init/: __init__.py  main.py  raspberry_pi.py  udev.py  util.py
