[metadata]
name = robo_init
version = attr: robo_init._version.__version__
author = RoboStack
author_email = wolf.vollprecht@quantstack.net
license_file = LICENSE
description = A tool to configure robots automatically
long_description = file: README.md
long_description_content_type = text/markdown
url = http://robostack.net
keywords = Robotics, System Administration
platforms = Linux
license = BSD 3-Clause License
classifiers =
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.6

# zip_safe = False
# include_package_data = True
packages = find:

# install_requires = []

[options.entry_points]
console_scripts =
    robo-initgen = robo_init.main:main


# [options.extras_require]
# test =
#   pytest>=3.6.0
#   pytest-cov